<resources>
    <string name="app_name">Beholder\'s Almanac</string>
    <string name="beholder_image">Beholder Image</string>
    <string name="character_sheet">Character Sheet</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="background">Background</string>
    <string name="main_menu">Main Menu</string>
    <string name="sign_in">Sign In</string>
    <string name="new_character">New Character</string>
    <string name="create_new_character">Character Creation</string>
    <string name="existing_characters">Existing Character</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string-array name="race_menu">
        <item>DragonBorn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Kenku</item>
        <item>LizardFolk</item>
        <item>Orc</item>
        <item>Tabaxi</item>
        <item>Tiefling</item>
        <item>Tortle</item>
        <item>Warforged</item>
    </string-array>
    <string-array name="level_menu">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
        <item>Level 6</item>
        <item>Level 7</item>
        <item>Level 8</item>
        <item>Level 9</item>
        <item>Level 10</item>
        <item>Level 11</item>
        <item>Level 12</item>
        <item>Level 13</item>
        <item>Level 14</item>
        <item>Level 15</item>
        <item>Level 16</item>
        <item>Level 17</item>
        <item>Level 18</item>
        <item>Level 19</item>
        <item>Level 20</item>
    </string-array>
    <string-array name="class_menu">
        <item>Artificer</item>
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Blood Hunter</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string name="roll_the_dice">Roll The Dice!</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="music">Music</string>
    <string name="title_schedaPG">Character Sheet</string>
    <string name="state" translatable="false">com.fexed.rpgsheet</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="nome_cognome">name surname</string>
    <string name="classi_di_abilit">classes</string>
    <string name="lv">lv</string>
    <string name="bonus_comp">Prof. bonus</string>
    <string name="ispirazione">Inspiration</string>
    <string name="str">STR</string>
    <string name="cos">CON</string>
    <string name="car">CHA</string>
    <string name="classe_armatura">Armor Class</string>
    <string name="dex">DEX</string>
    <string name="inte">INT</string>
    <string name="sag">WIS</string>
    <string name="punti_ferita">Hit Points</string>
    <string name="pf_massimi">Max HP</string>
    <string name="pazzia">Madness</string>
    <string name="affaticamento">Fatigue</string>
    <string name="abilit_e_talenti">Abilities</string>
    <string name="attacchi_e_incantesimi">Attacks and spellcasting</string>
    <string name="inventario">Inventory</string>
    <string name="background_e_note">Background and notes</string>
    <string name="tiri_salvezza">Saving Throws</string>
    <string name="tiro_salvezza">Saving Throw</string>
    <string name="lingue">Languages</string>
    <string name="competenze">Proficiencies</string>
    <string name="talenti">Class Features</string>
    <string name="abilit_di_classe_e_razza">Racial Traits</string>
    <string name="abilit">Skills</string>
    <string name="atletica">Athletics</string>
    <string name="acrobazia">Acrobatics</string>
    <string name="furtivit">Stealth</string>
    <string name="rapidit_di_mano">Sleight of Hand</string>
    <string name="investigare">Investigation</string>
    <string name="arcano">Arcana</string>
    <string name="storia">History</string>
    <string name="religione_e_folklore">Religion</string>
    <string name="natura">Nature</string>
    <string name="sopravvivenza">Survival</string>
    <string name="medicina">Medicine</string>
    <string name="percezione">Perception</string>
    <string name="intuizione">Insight</string>
    <string name="intimidire">Intimidation</string>
    <string name="ingannare">Deception</string>
    <string name="intrattenere">Performance</string>
    <string name="persuadere">Persuasion</string>
    <string name="animali">Animal Handling</string>
    <string name="incantesimi">Spells</string>
    <string name="statistica_rilevante">Spellcasting Ability</string>
    <string name="per_colpire">Spell attack bonus</string>
    <string name="cd">Spell Save DC</string>
    <string name="mana_punti">Sorcery/Ki/mana points</string>
    <string name="app_spell">Spells App</string>
    <string name="trucchetti">Cantrips</string>
    <string name="aggiungi">Add</string>
    <string name="livello_1">Level 1</string>
    <string name="livello_2">Level 2</string>
    <string name="livello_3">Level 3</string>
    <string name="livello_4">Level 4</string>
    <string name="livello_5">Level 5</string>
    <string name="livello_6">Level 6</string>
    <string name="livello_7">Level 7</string>
    <string name="livello_8">Level 8</string>
    <string name="livello_9">Level 9</string>
    <string name="livello">Level +</string>
    <string name="attacchi_corpo_a_corpo">Melee attacks</string>
    <string name="attacchi_a_distanza">Ranged attacks</string>
    <string name="soldi">Treasure</string>
    <string name="meleenameplaceholder">Steel Longsword</string>
    <string name="meleedamageplaceholder">1D12 Slashing</string>
    <string name="ok">OK</string>
    <string name="rimuovi">Remove</string>
    <string name="nome">Name</string>
    <string name="inseriscidatinuovo">Enter your character\'s details</string>
    <string name="nome_e_cognome">Full name</string>
    <string name="classi_e_livelli">Classes and levels</string>
    <string name="livello_totale">Level</string>
    <string name="rangednameplaceholder">Longbow</string>
    <string name="rangedrangeplaceholder">100 ft.</string>
    <string name="rangeddamageplaceholder">1D8 Piercing</string>
    <string name="errorattackname">Attack\'s name cannot be empty</string>
    <string name="errorattackdmg">Attack\'s damage cannot be empty</string>
    <string name="errorattackrng">Attack\'s range cannot be empty</string>
    <string name="selectspellstat">Select your spellcasting ability</string>
    <string name="annulla">Cancel</string>
    <string name="insertlevelof">Enter the level of </string>
    <string name="insertnewnameof">Enter the new name of </string>
    <string name="insertmaxpoints">Enter max points</string>
    <string name="insertmaxslots">Enter max slots</string>
    <string name="insertnewclass">Update classes and levels of </string>
    <string name="insertca">Enter AC</string>
    <string name="insertpf">Enter HP</string>
    <string name="insertmaxpf">Enter max HP</string>
    <string name="enterdamage">Enter how many HP you lost</string>
    <string name="entercure">Enter how many HP you gained</string>
    <string name="insertpferror">Current HP cannot be greater than max HP</string>
    <string name="insert">Enter </string>
    <string name="name">Name</string>
    <string name="range">Range</string>
    <string name="bonusdex">DEX</string>
    <string name="bonusfor">STR</string>
    <string name="damage">Damage</string>
    <string name="settings">Settings</string>
    <string name="pgnameerror">Character\'s name cannot be empty</string>
    <string name="pgclasserror">Character\'s class cannot be empty</string>
    <string name="pglverror">Character\'s level cannot be empty</string>
    <string name="dice">Dice</string>
    <string name="coin">Coin</string>
    <string name="dicerollhintchoose">Choose a dice!</string>
    <string name="roll">Roll</string>
    <string name="testa">Heads</string>
    <string name="croce">Tails</string>
    <string name="rame">Copper</string>
    <string name="argento">Silver</string>
    <string name="oro">Gold</string>
    <string name="platino">Platinum</string>
    <string name="insertxpof">Enter the experience points of</string>
    <string name="addxpof">Enter how many experience points you gained</string>
    <string name="keeppressedtoedit">Long tap to edit</string>
    <string name="addobjtoinv">Add an item to the inventory</string>
    <string name="scrollformore">Scroll for more →</string>
    <string name="comp">Prof.</string>
    <string name="mo">gp</string>
    <string name="total">Total</string>
    <string name="pgsgoldpieces">Editing %1$s\'s gold coins</string>
    <string name="pgsplatpieces">Editing %1$s\'s platinum coins</string>
    <string name="pgssilvpieces">Editing %1$s\'s silver coins</string>
    <string name="pgscopppieces">Editing %1$s\'s copper coins</string>
    <string name="pgcharsheet">%1$s\'s character sheet</string>
    <string name="howmanydice">How many D%1$ds to roll?</string>
    <string name="newweapon">New weapon</string>
    <string name="resettxt">Reset all the data</string>
    <string name="resetconfirm">Are you sure you want to reset all the data? You will lose your character.</string>
    <string name="areusure">Are you sure?</string>
    <string name="ratepls">Do you like the app? Leave an opinion on the Play Store!</string>
    <string name="edit">Edit</string>
    <string name="editdesc">Edit description</string>
    <string name="try_diceroller">Try the dice roller!</string>
    <string name="rateplslink"><a href="https://play.google.com/store/apps/details?id=com.fexed.rpgsheet">Go to the Store</a></string>
    <string name="sleep">Rest</string>
    <string name="resttxt">Rest! Spell slots and health have been restored!</string>
    <string name="cast">Cast spell</string>
    <string name="fileopenerror">An error occurred while opening file</string>
    <string name="selectpg">Select a character</string>
    <string name="newpg">New character</string>
    <string name="charselect">Select character</string>
    <string name="migratemsg">Migrating character</string>
    <string name="delpg">Remove character</string>
    <string name="pgdeleteok">Character successfully deleted</string>
    <string name="deleteconfirm">Are you sure?</string>
    <string name="delconfirmpg">Are you sure you want to delete %s?</string>
    <string name="casted">A %s spell has been casted!</string>
    <string name="noslots">No more %s slots left!</string>
    <string name="export">Export character</string>
    <string name="exporting">Exporting…</string>
    <string name="exportingchar">Exporting %s…</string>
    <string name="exportsuccess">Character exported successfully</string>
    <string name="keeptoremove">Long tap to remove</string>
    <string name="keeptoedit">Long tap to edit</string>
    <string name="naturaldice">Natural %s!</string>
    <string name="loadchar">Load</string>
    <string name="newlevel">Obtained level %s!</string>
    <string name="set_loadlastchar">Load last character on startup</string>
    <string name="set_5expthresholds">Use the DnD 5e experience tresholds</string>
    <string name="numbererror">Invalid number!</string>
    <string name="atk">Attack</string>
    <string name="atklbl">%s attack with proficiency (1D20 + %s + %s)</string>
    <string name="melee">Melee</string>
    <string name="ranged">Ranged</string>
    <string name="stats">Stats</string>
    <string name="dicethrown">%s dice thrown</string>
    <string name="dmgrec">%s damage received</string>
</resources>