<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchmentbackground"
    tools:context=".MainMenuActivity">



    <TextView
        android:id="@+id/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="141dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnCharacter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCharacter"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginBottom="216dp"
        android:background="@color/pumpkin"
        android:text="@string/character_sheet"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainBeholderImage" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/pumpkin"
        android:text="@string/settings"
        android:textColor="#FFF8E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDice"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/pumpkin"
        android:text="@string/dice_roller"
        android:textColor="#FFF8E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCharacter" />

    <ImageView
        android:id="@+id/mainBeholderImage"
        android:layout_width="216dp"
        android:layout_height="0dp"
        android:layout_marginTop="146dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="@string/beholder_image"
        app:layout_constraintBottom_toTopOf="@+id/btnCharacter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beholder_app_icon" />

    <Button
        android:id="@+id/btnMusicOn"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="16dp"
        android:background="@color/pumpkin"
        android:onClick="on"
        android:text="@string/on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnMusicOff"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/pumpkin"
        android:onClick="off"
        android:text="@string/off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/musicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="72dp"
        android:text="@string/music"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="90dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/pumpkin"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>